Migrate k8s utilization monitoring to metrics server